--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,18 @@
     "autoload": {
         "classmap": [
             "src/"
-        ]
+        ],
+      "psr-4": {
+        "src\\": "src"
+      }
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
-    }
+    },
+  "require": {
+    "ext-curl": "*",
+    "ext-json": "*",
+    "ext-readline": "*"
+  }
 }
 
